--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,8 @@
             <version>7.1.0</version>
             <scope>test</scope>
         </dependency>
+
+
     </dependencies>
 
     <!--Configure your suites here-->
@@ -46,7 +48,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.19.1</version>
+                        <version>3.0.0-M7</version>
                         <configuration>
                             <suiteXmlFiles>
                                 <!-- TestNG suite XML files -->
@@ -65,7 +67,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.19.1</version>
+                        <version>3.0.0-M7</version>
                         <configuration>
                             <suiteXmlFiles>
                                 <!-- TestNG suite XML files -->
@@ -84,7 +86,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.19.1</version>
+                        <version>3.0.0-M7</version>
                         <configuration>
                             <suiteXmlFiles>
                                 <!-- TestNG suite XML files -->
